classDiagram
    class Customer {
        +String name
        +list purchase_history
        +verify_user() bool
    }

    class Item {
        +String name
        +float price
        +String category
        +float popularity_rating
    }

    class Menu {
        +list items
        +add_item(Item item)
        +filter_by_category(String category) list
    }

    class Order {
        +list items
        +Customer customer
        +add_item(Item item)
        +compute_total() float
    }

    Customer --> Order
    Order --> Item
    Menu --> Item
